--- a/myTitanic.ipynb
+++ b/myTitanic.ipynb
@@ -34,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "потом найти более полные данные"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -3502,6 +3509,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#созд нов бинарную колонку по кабине нул-ненул\n",
+    "data['nullcab'] = np.where(data['Cabin'].isnull(), 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
    "outputs": [
@@ -3596,10 +3613,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "вероятно хорошо  бы сделать отдельную колонку с пометкой пропущенна информация по возрасту(LostAge) - их 177"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#созд нов бинарную колонку по Age нул-ненул\n",
+    "data['nullage'] = np.where(data['Age'].isnull(), 1, 0)"
    ]
   },
   {
